# openentai

./: .gitignore  .gitmodules  app.py  pyproject.toml  readme.md
ai/: embedding_models.py
models/: content.py  content_test.py
modules/content/: routes.py
